Proper parent update