@@ -13,7 +13,7 @@ import eu.maveniverse.maven.toolbox.shared.Result;
 import eu.maveniverse.maven.toolbox.shared.ToolboxCommando;
 import eu.maveniverse.maven.toolbox.shared.internal.PomSuppliers;
 import java.nio.file.Files;
-import java.util.Collections;
+import java.util.List;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.eclipse.aether.artifact.Artifact;
@@ -69,7 +69,7 @@ public class NewProject extends HelloMojoSupport {
                                 projectArtifact.getVersion()));
             });
             // apply changes
-            getToolboxCommando().editPom(editSession, Collections.singletonList(s -> {
+            getToolboxCommando().editPom(editSession, List.of(s -> {
                 String effectivePackaging = "jar";
                 if (packaging != null) {
                     effectivePackaging = packaging;
