@@ -10,7 +10,7 @@ package eu.maveniverse.maven.toolbox.plugin.mp;
 import eu.maveniverse.maven.toolbox.plugin.MPMojoSupport;
 import eu.maveniverse.maven.toolbox.shared.ResolutionScope;
 import eu.maveniverse.maven.toolbox.shared.Result;
-import java.util.Collections;
+import java.util.List;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 
@@ -27,7 +27,6 @@ public class ClasspathMojo extends MPMojoSupport {
 
     @Override
     protected Result<String> doExecute() throws Exception {
-        return getToolboxCommando()
-                .classpath(ResolutionScope.parse(scope), Collections.singletonList(projectAsResolutionRoot()));
+        return getToolboxCommando().classpath(ResolutionScope.parse(scope), List.of(projectAsResolutionRoot()));
     }
 }
