@@ -12,7 +12,7 @@ import eu.maveniverse.maven.toolbox.shared.ResolutionRoot;
 import eu.maveniverse.maven.toolbox.shared.ResolutionScope;
 import eu.maveniverse.maven.toolbox.shared.Result;
 import eu.maveniverse.maven.toolbox.shared.ToolboxCommando;
-import java.util.Collections;
+import java.util.List;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 
@@ -32,7 +32,7 @@ public class PluginClasspathMojo extends MPPluginMojoSupport {
         ToolboxCommando toolboxCommando = getToolboxCommando();
         ResolutionRoot root = pluginAsResolutionRoot(toolboxCommando, true);
         if (root != null) {
-            return toolboxCommando.classpath(ResolutionScope.parse(scope), Collections.singletonList(root));
+            return toolboxCommando.classpath(ResolutionScope.parse(scope), List.of(root));
         } else {
             return Result.failure("No such plugin");
         }
